<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_user"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.EditActivity">


        <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/dialog_radius_dark"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_lock"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="@string/change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_activity_password_old"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeErrorColor="@color/red"
                app:helperTextTextColor="@color/colorAccent"
                app:errorTextColor="@color/red"
                app:boxStrokeColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_editor_text_activity_password_old"
                    android:textCursorDrawable="@drawable/color_cursor_white"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_activity_password_new"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeErrorColor="@color/red"
                app:helperTextTextColor="@color/colorAccent"
                app:errorTextColor="@color/red"
                app:boxStrokeColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_editor_text_activity_password_new"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"

                    android:textColor="@color/colorAccent"
                    android:textCursorDrawable="@drawable/color_cursor_white" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_activity_password_confirm"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_password"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeErrorColor="@color/red"
                app:helperTextTextColor="@color/colorAccent"
                app:errorTextColor="@color/red"
                app:boxStrokeColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_editor_text_activity_password_confirm"
                    android:textCursorDrawable="@drawable/color_cursor_white"
                    android:textColor="@color/colorAccent"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:background="@drawable/bg_loading_subtitles_accent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <RelativeLayout
                    android:id="@+id/relative_layout_edit_activity_save"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:padding="10dp"
                        android:tint="@color/white"
                        app:srcCompat="@drawable/ic_check"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:textSize="7pt"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="@string/change_password"
                        android:layout_marginLeft="50dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
</RelativeLayout>
