<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="ltr"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:paddingTop="5dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/dialog_radius_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:padding="10dp"
                        android:tint="@color/white"
                        app:srcCompat="@drawable/ic_subscribe"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:gravity="center|left"
                        android:textSize="14dp"
                        android:text="Be Premium Be Free"
                        android:layout_marginLeft="50dp"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp" />
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
        </LinearLayout>
        <LinearLayout
            android:visibility="visible"
            android:id="@+id/payment_methode"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_below="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/bg_loading_subtitles_accent"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />
                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="30dp"
                    android:text="Payment Method"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_marginRight="25dp"
                    android:gravity="center"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:background="@drawable/bg_loading_subtitles_accent"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="25dp"
                    android:text="Cash"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:textStyle="bold" />
                <ImageView
                    android:tint="@color/white"
                    android:padding="5dp"
                    android:background="@drawable/bg_loading_subtitles_accent"
                    android:layout_alignParentRight="true"
                    app:srcCompat="@drawable/ic_check"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/bg_loading_subtitles_accent"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/text_view_activity_cash_plan"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="30dp"
                    android:text="Monthly Plan"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/text_view_activity_cash_price"
                    android:gravity="center"
                    android:layout_marginRight="25dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:background="@drawable/bg_loading_subtitles_accent"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="25dp"
                    android:text="29 USD"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:textStyle="bold" />
                <ImageView
                    android:tint="@color/white"
                    android:padding="5dp"
                    android:background="@drawable/bg_loading_subtitles_accent"
                    android:layout_alignParentRight="true"
                    app:srcCompat="@drawable/ic_check"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/bg_loading_subtitles_accent"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:text="3"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />
                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/enter_your_payment_details"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp"
                    android:textStyle="bold" />
                <ImageView
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_account_balance"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:background="@drawable/bg_loading_subtitles_accent"
                    android:layout_alignParentRight="true"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="25dp" />
            </RelativeLayout>
            <TextView
                android:id="@+id/text_view_activity_cash_account"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:text=""
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_genre"
                android:padding="9dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_activity_cash_trans"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_transaction_id"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeErrorColor="@color/red"
                app:helperTextTextColor="@color/colorAccent"
                app:errorTextColor="@color/red"
                app:boxStrokeColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_editor_text_activity_cash_trans"
                    android:textCursorDrawable="@drawable/color_cursor_white"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_activity_cash_infos"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/other_payment_infos"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeErrorColor="@color/red"
                app:helperTextTextColor="@color/colorAccent"
                app:errorTextColor="@color/red"
                app:boxStrokeColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_editor_text_activity_cash_infos"
                    android:textCursorDrawable="@drawable/color_cursor_white"
                    android:textColor="@color/colorAccent"
                    android:gravity="top|left"
                    android:lines="3"
                    android:maxLines="5"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minLines="3"
                    android:singleLine="false"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:background="@drawable/bg_upload"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <RelativeLayout
                    android:id="@+id/select_file"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                        <ImageView
                            android:layout_alignParentLeft="true"
                            android:padding="10dp"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@drawable/ic_attach_file"
                            android:layout_width="50dp"
                            android:layout_height="50dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="50dp"
                            android:gravity="center"
                            android:text="@string/click_to_upload_file_here"
                            android:textColor="@color/colorAccent"
                            android:textSize="7pt"
                            android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/bg_loading_subtitles_accent"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <RelativeLayout
                    android:id="@+id/payButton"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:focusable="true"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_alignParentRight="true"
                        android:padding="10dp"
                        android:tint="@color/white"
                        app:srcCompat="@drawable/ic_check"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="50dp"
                        android:gravity="center"
                        android:text="PAY NOW"
                        android:textColor="@color/white"
                        android:textSize="7pt"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>